--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,14 @@ footer {
 
 /* for the nutriti labels */
 
+.restaurantName, menuItem {
+  background: #aaaa;
+  margin-right: 10%;
+  overflow: auto;
+  border-radius: 5px;
+  box-shadow: 0 0 20px 0 rgba(72,94,116,0.7);
+}
+
 body {
   font-size: small;
   line-height: 1.4;
