--- a/assets/css/feedbackstyle.css
+++ b/assets/css/feedbackstyle.css
@@ -10,8 +10,9 @@ body {
 #logo {
     background-image: url("../images/header2.jpg"); width: 1644px; height: 300px; 
     border: 2px solid gray;
-    margin-left: 3px;
-    margin-right: 2px;
+    width: 1100px;
+    margin-left: auto;
+    margin-right: auto;
     box-shadow: 0 0 20px 0 rgba(72,94,116,0.7);
    
 }
